--- a/colorgame/colorGame.html
+++ b/colorgame/colorGame.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Color Game</title>
+	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
@@ -9,6 +10,9 @@
 	The Great <span id="colorDisplay">RGB</span> Color Game
 </h1>
 
+	<div>
+		<span id = "message"></span>
+	</div>
 	<div id="container">
 		<div class="square"></div>
 		<div class="square"></div>
