--- a/colorgame/colorGame.html
+++ b/colorgame/colorGame.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 <h1>
-	The Great <span id="colorDisplay">RGB</span> Color Game
+	The Great 
+	<br> <!-- shortcut to add linebreak - not best practice! -->
+	<span id="colorDisplay">RGB</span> 
+	<br> <!-- shortcut to add linebreak - not best practice! -->
+	Color Game
 </h1>
 
 	<div id="stripe">
